# robotraconteur

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .run-clang-format  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  QUALITY_DECLARATION.md  README.md  VULNERABILITY_POLICY.md  cmake_config_options.cmake  colcon.pkg  cspell.config.yaml  package.xml  pbuilderrc  robotraconteur_0.15.2-1~buster.debian.tar.xz  robotraconteur_0.15.2-1~buster.dsc  robotraconteur_0.15.2-1~buster_source.changes
RobotRaconteurCore/: CMakeLists.txt
RobotRaconteurCore/cmake/: BasicConfigVersion-ExactVersion-NoPtrCheck.cmake.in  RobotRaconteurConfig-apple-devtree.cmake  RobotRaconteurConfig-apple.cmake  RobotRaconteurConfig-linux-devtree.cmake  RobotRaconteurConfig-linux.cmake  RobotRaconteurConfig-win-devtree.cmake  RobotRaconteurConfig-win.cmake  RobotRaconteurGenerateThunk.cmake
RobotRaconteurCore/include/: RobotRaconteur.h
RobotRaconteurCore/src/: ASIOStreamBaseTransport.cpp  ASIOStreamBaseTransport.h  AsyncMessageIO.cpp  AsyncMessageReader.cpp  AsyncMessageReader.h  AsyncMessageWriter.cpp  AsyncMessageWriter.h  AsyncUtils.cpp  AutoResetEvent.cpp  BroadcastDownsampler.cpp  BrowserWebSocketTransport.cpp  BrowserWebSocketTransport_private.h  CallbackMember.cpp  Client.cpp  DataTypes.cpp  DataTypesPacking.cpp  Discovery.cpp  Discovery_private.h  Endpoint.cpp  Error.cpp  Generator.cpp  HardwareTransport.cpp  HardwareTransport_android.cpp  HardwareTransport_android_private.h  HardwareTransport_bluetoothcommon_private.h  HardwareTransport_discoverycommon_private.h  HardwareTransport_libusb.cpp  HardwareTransport_libusb_private.h  HardwareTransport_linux.cpp  HardwareTransport_linux_private.h  HardwareTransport_private.h  HardwareTransport_usbcommon.cpp  HardwareTransport_usbcommon_private.h  HardwareTransport_win.cpp  HardwareTransport_win_private.h  IOUtils.cpp  IntraTransport.cpp  IntraTransport_private.h  LocalTransport.cpp  LocalTransport_darwin.cpp  (+52 more)
RobotRaconteurGen/: CMakeLists.txt  CPPServiceLangGen.cpp  CPPServiceLangGen.h  CSharpServiceLangGen.cpp  CSharpServiceLangGen.h  JavaServiceLangGen.cpp  JavaServiceLangGen.h  RobotRaconteurGen.cpp  StringTableGen.cpp  StringTableGen.h  stdafx.h
RobotRaconteurGen/cmake/: RobotRaconteurGenerateThunk.cmake
RobotRaconteurJava/: Android.i  BroadcastDownsamplerJava.i  CMakeLists.txt  DiscoveryJava.i  ExceptionTemplate.java.in  HardwareTransportJava.i  JavaExceptionTypemaps.i  JavaExceptions.cmake  JavaSwigVars.cmake  JavaTypemaps.i  Manifest.txt.in  MessageJava.i  NodeIDJava.i  NodeSetupJava.i  RobotRaconteurExceptionUtil.java.in  RobotRaconteurJava.i  RobotRaconteurJavaNode.i  ServiceDefinitionJava.i  ServiceJava.i  ServiceSecurityJava.i  TcpTransportJava.i  TimeSpecJava.i  TimerJava.i
RobotRaconteurJava/swiglib_patched/: arrays_java.i  java.swg  javahead.swg  typemaps.i
RobotRaconteurMex/: CMakeLists.txt  RobotRaconteurAsyncOps.m  RobotRaconteurFramework.m  RobotRaconteurMex.cpp  RobotRaconteurMex.h  RobotRaconteurObjectServerConnectEvent.m  RobotRaconteurObjectServerDispatchEvent.m  RobotRaconteurValueTypes.m  osx_mex_exports.txt
RobotRaconteurMex/@RobotRaconteur/: RobotRaconteur.m
RobotRaconteurMex/@RobotRaconteurEventData/: RobotRaconteurEventData.m
RobotRaconteurMex/@RobotRaconteurEventListener/: RobotRaconteurEventListener.m  delete.m
RobotRaconteurMex/@RobotRaconteurGenerator/: RobotRaconteurGenerator.m  subsref.m
RobotRaconteurMex/@RobotRaconteurMemoryClient/: RobotRaconteurMemoryClient.m  isreal.m  length.m  ndims.m  numel.m  size.m  subsasgn.m  subsref.m
RobotRaconteurMex/@RobotRaconteurNull/: RobotRaconteurNull.m
RobotRaconteurMex/@RobotRaconteurObject/: RobotRaconteurObject.m  addlistener.m  constants.m  createstructure.m  disableevents.m  disconnect.m  disp.m  display.m  enableevents.m  getpulledservicetype.m  getpulledservicetypes.m  lockop.m  members.m  servicedef.m  subsasgn.m  subsref.m  type.m
RobotRaconteurMex/@RobotRaconteurPipeEndpoint/: RobotRaconteurPipeEndpoint.m
RobotRaconteurMex/@RobotRaconteurPipeSubscription/: RobotRaconteurPipeSubscription.m
RobotRaconteurMex/@RobotRaconteurRate/: RobotRaconteurRate.m
RobotRaconteurMex/@RobotRaconteurServiceInfo2Subscription/: RobotRaconteurServiceInfo2Subscription.m  subsasgn.m
RobotRaconteurMex/@RobotRaconteurServiceSubscription/: RobotRaconteurServiceSubscription.m
RobotRaconteurMex/@RobotRaconteurSubObjectSubscription/: RobotRaconteurSubObjectSubscription.m  subsasgn.m
RobotRaconteurNET/: BroadcastDownsamplerNET.i  CMakeLists.txt  DiscoveryNET.i  HardwareTransportNET.i  LocalTransportNET.i  LoggingNET.i  MessageNET.i  NETExceptionTypemaps.i  NETExceptions.cmake  NETSwigVars.cmake  NETTypemaps.i  NodeIDNET.i  NodeSetupNET.i  README.md  RobotRaconteurNET.dll.config  RobotRaconteurNET.i  RobotRaconteurNET.xml  RobotRaconteurNET.xml.in  RobotRaconteurNodeNET.i  ServiceDefinitionNET.i  ServiceNET.i  ServiceSecurityNET.i  TcpTransportNET.i  TimeSpecNET.i  TimerNET.i  merge_doc_xml.cmake.in
RobotRaconteurPython/: BroadcastDownsamplerPython.i  BrowserWebSocketTransportPython.i  CMakeLists.txt  Client.py  ClientPython.i  DiscoveryPython.i  HardwareTransportPython.i  LocalTransportPython.i  LoggingPython.i  MessagePython.i  NamedClient.py  NodeIDPython.i  PythonDocstring.i  PythonExceptionTypemaps.i  PythonExceptions.cmake  PythonNondynamic.i  PythonPackageVersion.cmake  PythonSwigVars.cmake  PythonTypeSupport.cpp  PythonTypeSupport.h  PythonTypeSupport.i  PythonTypemaps.i  README.md  RobotRaconteurNodePython.i  RobotRaconteurPython.i  RobotRaconteurPythonDataTypes.py  RobotRaconteurPythonError.py.in  RobotRaconteurPythonUtil.py  ServiceDefinitionPython.i  ServicePython.i  ServiceSecurityPython.i  TcpTransportPython.i  TimeSpecPython.i  TimerPython.i  __init__.py  classproperty.py  python_install.cmake.in  rr_intrusive_ptr.i  setup.py.in  vcpybuild.bat
RobotRaconteurPython3/: CMakeLists.txt  python3_install.cmake.in  python3_install_pip.cmake.in
examples/: CMakeLists.txt  README.md
test/: CMakeLists.txt
(+2495 files in other folders)
