<?xml version="1.0"?>
<package format="3">
  <name>robotraconteur</name>
  <version>0.18.1</version>
  <description>The robotraconteur package</description>

  <maintainer email="wason@wasontech.com">John Wason</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://robotraconteur.com</url>

  <author email="wason@wasontech.com">John Wason</author>
  
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>libssl-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libdbus-dev</depend>
  <depend>libbluetooth-dev</depend>
  <depend>zlib</depend>
  <depend>python3-dev</depend>
  <depend>python3-numpy</depend>
  <depend>python3-setuptools</depend>
  <test_depend>gtest</test_depend>
    
  <export>    
    <build_type>cmake</build_type>
  </export>
</package>
