<?xml version="1.0"?>
<package format="3">
  <name>robotraconteur</name>
  <version>1.2.5</version>
  <description>The robotraconteur package</description>

  <maintainer email="wason@wasontech.com">John Wason</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://robotraconteur.com</url>

  <author email="wason@wasontech.com">John Wason</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libdbus-dev</build_depend>
  <build_depend>libbluetooth-dev</build_depend>
  <build_depend>zlib</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-setuptools</build_depend>

  <exec_depend>libboost-date-time</exec_depend>
  <exec_depend>libboost-filesystem</exec_depend>
  <exec_depend>libboost-system</exec_depend>
  <exec_depend>libboost-regex</exec_depend>
  <exec_depend>libboost-chrono</exec_depend>
  <exec_depend>libboost-atomic</exec_depend>
  <exec_depend>libboost-thread</exec_depend>
  <exec_depend>libboost-random</exec_depend>
  <exec_depend>libboost-program-options</exec_depend>
  <exec_depend>libssl-dev</exec_depend>
  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>libdbus-dev</exec_depend>
  <exec_depend>libbluetooth</exec_depend>
  <exec_depend>zlib</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
